[gd_scene load_steps=22 format=3 uid="uid://djp54pygs32jy"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_0nxi1"]
[ext_resource type="Texture2D" uid="uid://clhbix8ugiwvv" path="res://assets/CloakedLittleGuy.png" id="2_5h1bl"]
[ext_resource type="Script" path="res://scripts/weapon.gd" id="3_vxs7l"]
[ext_resource type="Script" path="res://scripts/HurtBox.gd" id="5_c2u06"]
[ext_resource type="Texture2D" uid="uid://d3v42dmvp8sag" path="res://assets/SwordSlash.png" id="5_p2yah"]
[ext_resource type="AudioStream" uid="uid://dpnhvdpq4i7kd" path="res://assets/sounds/422507__nightflame__swinging-staff-whoosh-strong-07.wav" id="6_uctel"]
[ext_resource type="AudioStream" uid="uid://ddrptndpkxcco" path="res://assets/sounds/170148__timgormly__8-bit-hurt1.wav" id="7_vyip1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d2up4"]
atlas = ExtResource("2_5h1bl")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8dto"]
atlas = ExtResource("2_5h1bl")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_11wr5"]
atlas = ExtResource("2_5h1bl")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqahi"]
atlas = ExtResource("2_5h1bl")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wtq5"]
atlas = ExtResource("2_5h1bl")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sgpq"]
atlas = ExtResource("2_5h1bl")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcarv"]
atlas = ExtResource("2_5h1bl")
region = Rect2(80, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_nrjdl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2up4")
}],
"loop": false,
"name": &"default",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8dto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11wr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqahi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wtq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sgpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcarv")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jme7u"]
size = Vector2(14, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vo0li"]
size = Vector2(16, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_tsrgv"]
radius = 18.0

[sub_resource type="Animation" id="Animation_wfweq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraShake:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4d8up"]
resource_name = "camera_shake"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraShake:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.12, 0.23, 0.31, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 2), Vector2(2, 0), Vector2(-2, 0), Vector2(0, -2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjh5b"]
_data = {
"RESET": SubResource("Animation_wfweq"),
"camera_shake": SubResource("Animation_4d8up")
}

[node name="Player" type="CharacterBody2D" groups=["save"]]
process_mode = 1
z_index = 1
y_sort_enabled = true
position = Vector2(197, 148)
motion_mode = 1
script = ExtResource("1_0nxi1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_nrjdl")
animation = &"walk"
frame = 5
frame_progress = 1.0
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jme7u")

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource("3_vxs7l")

[node name="HurtBox" type="Area2D" parent="Weapon"]
script = ExtResource("5_c2u06")
entity = "Player"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Weapon/HurtBox"]
position = Vector2(19, -4)
polygon = PackedVector2Array(6, -9, -2, -15, -10, -19, -13, -14, -12, 0, -13, 14, -10, 22, 1, 24, 7, 16, 9, 3)

[node name="Sprite2D2" type="Sprite2D" parent="Weapon/HurtBox"]
position = Vector2(17, -3)
texture = ExtResource("5_p2yah")

[node name="SwingTimer" type="Timer" parent="Weapon"]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Weapon"]
stream = ExtResource("6_uctel")

[node name="HurtDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtDetector"]
shape = SubResource("RectangleShape2D_vo0li")
debug_color = Color(0, 0.64217, 0.322278, 0.42)

[node name="InteractableDetector" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableDetector"]
rotation = 1.5708
shape = SubResource("CircleShape2D_tsrgv")

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="iFrameTimer" type="Timer" parent="."]

[node name="CameraShake" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraShake"]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wjh5b")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_vyip1")

[connection signal="sword_level_changed" from="." to="Weapon" method="_on_player_sword_level_changed"]
[connection signal="timeout" from="Weapon/SwingTimer" to="Weapon" method="_on_swing_timer_timeout"]
[connection signal="area_entered" from="HurtDetector" to="." method="_on_hurt_detector_area_entered"]
[connection signal="area_entered" from="InteractableDetector" to="." method="_on_interactable_detector_area_entered"]
[connection signal="area_exited" from="InteractableDetector" to="." method="_on_interactable_detector_area_exited"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="timeout" from="iFrameTimer" to="." method="_on_i_frame_timer_timeout"]
